index.css
/* ... */
.black_link{
  color: black;
  font-size: 30%;
}
#holdcloseimg {
  width: 100vw;
  height: 140vh;
  left: 0;
  top: 0;
  position: absolute;
  z-index: 0;
  overflow: hidden;
}
#direct_resume {
  top: 45vh;
  left: 10vw;
}
#story {
  top: 40vh;
  left: 5vw;
  display: none;
}
#panel1 {
  left: 2vw;
  width: 28vw;
}
#panel2 {
  left: 34vw;
  width: 30vw;
}
#panel3 {
  left: 68vw;
  width: 28vw;
}
.panel{
  text-align: center;
  overflow: hidden;
  background-color: rgba(171, 193, 240, 0);
  transition: all .4s;
  padding: 10px;
  position: absolute;
  height: 30vh;
  padding-bottom: 35px;
  font-size: 3vw;
  color: rgba(225, 225, 225, 1);
  border-radius: 2px;
  cursor: pointer;
  z-index: 6;
  bottom: 40vh;
}
.panel:hover{
  transition: all .7s;
  color: black;
  background-color: white;
  height: 42vh;
  border-radius: 1vw 1vw 0 0;
  box-shadow: 4px -5px 34px 4px rgba(0,0,0,0.42);
}
#landing_text{
  text-align: center;
  position: absolute;
  left: 0vw;
  top: 35vh;
  font-size: calc(2vw + 14px);
  width: 100%;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 1), 3px 3px 1px rgba(0, 0, 0, .5), 5px 5px 1px rgba(0, 0, 0, .2);
  font-weight: 600;
}
#design {
  color: white;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 1), 3px 3px 1px rgba(0, 0, 0, .5), 5px 5px 1px rgba(0, 0, 0, .2);
  font-size: calc(1.5vw + 12px);
  font-style: italic;
  position: absolute;
  font-weight: 545;
  left: 10vw;
  top: 35vh;
}
.smallstart{
  color: white;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 1), 3px 3px 1px rgba(0, 0, 0, .5), 5px 5px 1px rgba(0, 0, 0, .2);
  font-size: calc(1.2vw + 7px);
  font-style: italic;
  font-weight: 445;
  margin-left: 36px;
  top: 35vh;
}
.vw4{
  font-size: 4vw;
  margin: none;
  line-height: 0.5vw;
  text-shadow: 4px 4px 1px rgba(0, 0, 0, 1), 8px 8px 1px rgba(0, 0, 0, .5);
  font-weight: 600;
}
.landing_image{
  height: 27vh;
  left: 2%;
  width: 88%;
  margin: 20px;
  position: absolute;
}
/** bulk text (page 1) */
#content1{

}
/** slider1 (page 2) */
#content2{

}
/** explain (page 3) */
#content3{

}
.extend_height{
  height: 30vh;
}
/** slider2 (page 4) */
#content4{

}
/** explain (page 5) */
#content5{

}
.contentLast{
  width: 130%;
  background: white;
  background: linear-gradient(0deg, rgba(100,70,107,1) 0%, rgba(233, 239, 244, 1) 100%);
  margin-left: 0;
  left: 0%;
  margin-bottom: 0;
  padding-bottom: 0;
}
.big{
  display: block;
  position: absolute;
  top: 10%;
  left: 4%;
  color: black;
  font-size: 7vw;
  width: 100%;
  text-align: center;
  font-family: Times;
}
@media only screen and (max-width: 780px) {
    .fullpage{
      width: 100%;
      background-color: rgba(233, 239, 244, 1);
      margin-bottom: 70%;
      margin-left: 0;
      min-height: 500px;
      max-width: 780px;
    }
    #content0{
      width: 106%;
      left: -3%;
      top: -10px;
    }
    .text{
      height: 35%;
      max-height: 30%;
      top: calc(-5vh + 20%);
      width: 90.5%;
      margin: 0;
      left: 0;
      margin-right: 2px;
      max-width: 90.5%;
      font-size: 128%;
    }
    .text::-webkit-scrollbar{
    }
    .text::-webkit-scrollbar-thumb{
      background-color: rgba(190, 77, 77, 1);
    }
    .fullimg{
      height: 55%;
      bottom: 0;
      width: 100%;
      margin: 0;
      max-width: 100%;
      top: 65%;
      left: 0;
      margin: 0;
      right: 1%;
      min-height: 200px;
    }
    .ytv{
      margin-top: -35%;
      width: 100vw;
      height: 56vw;
      min-height: calc( 100px + 25vw);
    }
    .fullimgh{
      height: 75%;
      bottom: 0;
      width: 100%;
      margin: 0;
      max-width: 100%;
      top: 65%;
      left: 0;
      margin: 0;
      right: 1%;
      overflow: hidden;
      min-height: 200px;
    }
  .fullvidh{
      height: calc(20px + 75%);
      bottom: 0;
      width: 100%;
      margin: 0;
      max-width: 100%;
      top: 65%;
      left: 0;
      margin: 0;
      right: 1%;
      overflow: visible;
      min-height: 200px;
      border-radius: 5px;
  }
    .ital{
      top: 0%;
      width: 96%;
      height: 2.0%;
      background: rgba(0, 50, 80, .9);
    }
    .right_side {
      position: absolute;
      background: rgba(0, 0, 0, 0);
      left: 0;
      bottom: 10px;
      top: 86%;
      width: 100%;
      height: 20%;
      z-index: 4;
    }
    .cont_gd_off{
      transition: all .3s;
      z-index: 7;
      position: relative;
      width: 20%;
      height: 100%;
      overflow: hidden;
      padding: 4px;
      margin-left: 2px;;
      margin-bottom: 2px;
      font-size: 8%;
      margin-top: calc(4px - 10%);
      padding-top: 0px;
      display: inline-block;
    }
    .slider_container{
      width: 100%;
      right: 0%;
      top: 55%;
      height: 50%;
      position: absolute;
    }
    .ba-slider {
        z-index: 3;
        overflow: hidden;
        width: 100%;
        right: 0%;
        top: 55%;
        height: auto;
        position: absolute;
    }
    .cont_gd_off_after{
      font-size: 15px;
      padding: 0;
      text-align: center;
    }
    .big{
      display: none;
    }
    .in-view{
      transition: all 1s;
      transform: translate(0, 4vh);
      opacity: 1;
    }
    #landimg {
      height: auto;
      min-height: 100%;
      min-width: 100%;
      width: 150vh;
      top: 0%;
      left: -40vh;
      filter: none;
    }
    iframe {
      width: 365px;
      height: 560px;
    }
    html, body {
      overflow: hidden;
      overflow-x: hidden;
      overflow-y: scroll;
      width: 97.5vw;
    }
    body::-webkit-scrollbar, html::-webkit-scrollbar{
      display: none;
    }
    .contentLast{
      margin-bottom: 0;
    }
    #hold_contact{
      position: relative;
      margin-top: 15%;
      width: 75%;
      margin-left: 2%;
      left: 13%;
      height: 50%;
    }
    .close_graphic{
      display: none;
    }
    .center_btn {
      left: 40%;
      width: 20%;
    }
}

